# flyloft

./: .editorconfig  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  charter.md  deny.toml  flyloft.example.toml  justfile  lefthook.yml
.claude/rules/: kos-commits.md  rust.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  scorecards.yml
_kos/: kos.yaml
_kos/ideas/: federation-expansion-breakage.md  flyperson-grooming-surface-payoff.md  held-cataloged-unification-viability.md  local-reranker-bottleneck-at-corpus-scale.md  reciprocal-rank-fusion-normalization.md
crates/flyloft-cli/: Cargo.toml
crates/flyloft-cli/src/: main.rs
crates/flyloft-core/: Cargo.toml
crates/flyloft-core/src/: batten.rs  catalog.rs  cue.rs  grid.rs  lib.rs  line_set.rs  provenance.rs
crates/flyloft-mcp/: Cargo.toml
crates/flyloft-mcp/src/: main.rs
decisions/: index.md
docs/: ARCHITECTURE.md  CATALOGS.md  CLI.md  CONCEPTS.md  INTEGRATION.md  MCP.md  ROADMAP.md
examples/grid/: README.md
examples/grid/cues/: 2026-04.jsonl
examples/grid/line-sets/ls_01hxxxegress/: manifest.yaml  source.md
examples/grid/line-sets/ls_01hxxxegress/battens/: bat_aaaaegress001.yaml  bat_bbbbegress002.yaml  bat_ccccegress003.yaml
examples/grid/line-sets/ls_01hxxxgithub_cilium/: manifest.yaml
examples/grid/line-sets/ls_01hxxxgithub_cilium/battens/: bat_ddddcatlog001.yaml
