[workspace]
resolver = "2"
members = [
    "crates/flyloft-core",
    "crates/flyloft-mcp",
    "crates/flyloft-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ArcavenAE/flyloft"
authors = ["Arcaven AE"]

[workspace.dependencies]
# Core data
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
blake3 = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors, logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage / index
lancedb = "0.4"
tantivy = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }

# Git
git2 = "0.18"

# MCP (placeholder — pin when upstream stabilizes)
# mcp-sdk = "..."
