[package]
name = "flyloft-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flyloft"
path = "src/main.rs"

[dependencies]
flyloft-core = { path = "../flyloft-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
