[package]
name = "flyloft-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flyloft-mcp"
path = "src/main.rs"

[dependencies]
flyloft-core = { path = "../flyloft-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# mcp-sdk = "..."  # pin when upstream stabilizes
